erDiagram
  TENANTS ||--o{ USERS : employs
  USERS ||--o{ USER_ROLES : has
  ROLES ||--o{ USER_ROLES : assigned
  ROLES ||--o{ ROLE_PERMISSIONS : grants
  PERMISSIONS ||--o{ ROLE_PERMISSIONS : included
  ROLES ||--o{ ROLE_SCOPES : scoped
  TENANTS ||--o{ ORG_UNITS : structures
  ORG_UNITS ||--o{ ORG_UNITS : parent_of
  USERS ||--o{ USER_ORG_ASSIGNMENTS : assigned_to
  ORG_UNITS ||--o{ USER_ORG_ASSIGNMENTS : filled_by
  ROLES ||--o{ USER_ORG_ASSIGNMENTS : role_for


